// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptiveAspects cookie server invalid 1`] = `
"{
 \\"$serialized$\\": \\"inst\\",
 \\"module\\": \\"UICore/Adaptive:_AdaptiveModeClass\\",
 \\"id\\": 2,
 \\"state\\": {
  \\"containerClientWidth\\": 768,
  \\"containerClientHeight\\": 1024
 }
}"
`;

exports[`adaptiveAspects cookie server set 1`] = `Object {}`;

exports[`adaptiveAspects cookie server set with dots 1`] = `Object {}`;

exports[`adaptiveAspects cookie server valid 1`] = `
"{
 \\"$serialized$\\": \\"inst\\",
 \\"module\\": \\"UICore/Adaptive:_AdaptiveModeClass\\",
 \\"id\\": 1,
 \\"state\\": {
  \\"containerClientWidth\\": 768,
  \\"containerClientHeight\\": 1024
 }
}"
`;
